tests/run-make/crate-loading/multiple-dep-versions.stderr
<<<<<<< Updated upstream
error[E0277]: the trait bound `dep_2_reexport::Type: dependency::Trait` is not satisfied
||||||| Stash base
error[E0277]: the trait bound `dep_2_reexport::Type: Trait` is not satisfied
=======
warning: unused imports: `OtherType`, `Trait2`, and `Type`
>>>>>>> Stashed changes
  --> replaced
   |
<<<<<<< Updated upstream
LL |     do_something(Type);
   |     ------------ ^^^^ the trait `dependency::Trait` is not implemented for `dep_2_reexport::Type`
   |     |
   |     required by a bound introduced by this call
||||||| Stash base
LL |     do_something(Type);
   |     ------------ ^^^^ the trait `Trait` is not implemented for `dep_2_reexport::Type`
   |     |
   |     required by a bound introduced by this call
=======
LL | use dep_2_reexport::{OtherType, Trait2, Type, into_type2};
   |                      ^^^^^^^^^  ^^^^^^  ^^^^
>>>>>>> Stashed changes
   |
<<<<<<< Updated upstream
note: there are multiple different versions of crate `dependency` in the dependency graph
  --> replaced
   |
LL | pub struct Type(pub i32);
   | --------------- this type implements the required trait
LL | pub trait Trait {
   | ^^^^^^^^^^^^^^^ this is the required trait
   |
  ::: replaced
   |
LL | extern crate dep_2_reexport;
   | ---------------------------- one version of crate `dependency` used here, as a dependency of crate `foo`
LL | extern crate dependency;
   | ------------------------ one version of crate `dependency` used here, as a direct dependency of the current crate
   |
  ::: replaced
   |
LL | pub struct Type;
   | --------------- this type doesn't implement the required trait
LL | pub trait Trait {
   | --------------- this is the found trait
   = note: two types coming from two different versions of the same crate are different types even if they look the same
   = help: you can use `cargo tree` to explore your dependency tree
note: required by a bound in `dependency::do_something`
  --> replaced
   |
LL | pub fn do_something<X: Trait>(_: X) {}
   |                        ^^^^^ required by this bound in `do_something`
||||||| Stash base
note: there are multiple different versions of crate `dependency` in the dependency graph
  --> replaced
   |
LL | pub struct Type(pub i32);
   | --------------- this type implements the required trait
LL | pub trait Trait {
   | ^^^^^^^^^^^^^^^ this is the required trait
   |
  ::: replaced
   |
LL | extern crate dep_2_reexport;
   | ---------------------------- one version of crate `dependency` used here, as a dependency of crate `foo`
LL | extern crate dependency;
   | ------------------------ one version of crate `dependency` used here, as a direct dependency of the current crate
   |
  ::: replaced
   |
LL | pub struct Type;
   | --------------- this type doesn't implement the required trait
LL | pub trait Trait {
   | --------------- this is the found trait
   = note: two types coming from two different versions of the same crate are different types even if they look the same
   = help: you can use `cargo tree` to explore your dependency tree
note: required by a bound in `do_something`
  --> replaced
   |
LL | pub fn do_something<X: Trait>(_: X) {}
   |                        ^^^^^ required by this bound in `do_something`
=======
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
>>>>>>> Stashed changes

warning: unused imports: `Trait`, `do_something_trait`, `do_something_type`, and `do_something`
  --> replaced
   |
LL | use dependency::{Trait, do_something, do_something_trait, do_something_type};
   |                  ^^^^^  ^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `dep_2_reexport::dependency::Type2: From<MainType>` is not satisfied
  --> replaced
   |
<<<<<<< Updated upstream
LL |     Type::bar();
   |           ^^^ function or associated item not found in `dep_2_reexport::Type`
   |
note: there are multiple different versions of crate `dependency` in the dependency graph
  --> replaced
   |
LL | pub trait Trait {
   | ^^^^^^^^^^^^^^^ this is the trait that is needed
LL |     fn foo(&self);
LL |     fn bar();
   |     --------- the associated function is available for `dep_2_reexport::Type` here
   |
  ::: replaced
   |
LL | use dependency::{Trait, do_something, do_something_trait, do_something_type};
   |                  ----- `Trait` imported here doesn't correspond to the right version of crate `dependency`
   |
  ::: replaced
   |
LL | pub trait Trait {
   | --------------- this is the trait that was imported

error[E0277]: the trait bound `OtherType: dependency::Trait` is not satisfied
  --> replaced
   |
LL |     do_something(OtherType);
   |     ------------ ^^^^^^^^^ the trait `dependency::Trait` is not implemented for `OtherType`
||||||| Stash base
LL |     Type::bar();
   |           ^^^ function or associated item not found in `dep_2_reexport::Type`
   |
note: there are multiple different versions of crate `dependency` in the dependency graph
  --> replaced
   |
LL | pub trait Trait {
   | ^^^^^^^^^^^^^^^ this is the trait that is needed
LL |     fn foo(&self);
LL |     fn bar();
   |     --------- the associated function is available for `dep_2_reexport::Type` here
   |
  ::: replaced
   |
LL | use dependency::{Trait, do_something, do_something_trait, do_something_type};
   |                  ----- `Trait` imported here doesn't correspond to the right version of crate `dependency`
   |
  ::: replaced
   |
LL | pub trait Trait {
   | --------------- this is the trait that was imported

error[E0277]: the trait bound `OtherType: Trait` is not satisfied
  --> replaced
   |
LL |     do_something(OtherType);
   |     ------------ ^^^^^^^^^ the trait `Trait` is not implemented for `OtherType`
=======
LL |     into_type2(MainType);
   |     ---------- ^^^^^^^^ the trait `From<MainType>` is not implemented for `dep_2_reexport::dependency::Type2`
>>>>>>> Stashed changes
   |     |
   |     required by a bound introduced by this call
   |
help: item with same name found
  --> replaced
   |
<<<<<<< Updated upstream
LL | pub trait Trait {
   | ^^^^^^^^^^^^^^^ this is the required trait
   |
  ::: replaced
   |
LL | extern crate dep_2_reexport;
   | ---------------------------- one version of crate `dependency` used here, as a dependency of crate `foo`
LL | extern crate dependency;
   | ------------------------ one version of crate `dependency` used here, as a direct dependency of the current crate
   |
  ::: replaced
   |
LL | pub struct OtherType;
   | -------------------- this type doesn't implement the required trait
   |
  ::: replaced
   |
LL | pub trait Trait {
   | --------------- this is the found trait
   = help: you can use `cargo tree` to explore your dependency tree
note: required by a bound in `dependency::do_something`
||||||| Stash base
LL | pub trait Trait {
   | ^^^^^^^^^^^^^^^ this is the required trait
   |
  ::: replaced
   |
LL | extern crate dep_2_reexport;
   | ---------------------------- one version of crate `dependency` used here, as a dependency of crate `foo`
LL | extern crate dependency;
   | ------------------------ one version of crate `dependency` used here, as a direct dependency of the current crate
   |
  ::: replaced
   |
LL | pub struct OtherType;
   | -------------------- this type doesn't implement the required trait
   |
  ::: replaced
   |
LL | pub trait Trait {
   | --------------- this is the found trait
   = help: you can use `cargo tree` to explore your dependency tree
note: required by a bound in `do_something`
=======
LL | pub struct Type2; // Only re-exported indirectly, never directly
   | ^^^^^^^^^^^^^^^^
   = note: perhaps two different versions of crate `dependency` are being used?
   = note: required for `MainType` to implement `Into<dep_2_reexport::dependency::Type2>`
note: required by a bound in `into_type2`
>>>>>>> Stashed changes
  --> replaced
   |
LL | pub fn into_type2(_: impl Into<dependency::Type2>) {}
   |                           ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `into_type2`

error: aborting due to 1 previous error; 2 warnings emitted

<<<<<<< Updated upstream
error[E0308]: mismatched types
  --> replaced
   |
LL |     do_something_trait(Box::new(Type) as Box<dyn Trait2>);
   |     ------------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected trait `dependency::Trait2`, found trait `dep_2_reexport::Trait2`
   |     |
   |     arguments to this function are incorrect
   |
note: two different versions of crate `dependency` are being used; two types coming from two different versions of the same crate are different types even if they look the same
  --> replaced
   |
LL | pub trait Trait2 {}
   | ^^^^^^^^^^^^^^^^ this is the expected trait `dependency::Trait2`
   |
  ::: replaced
   |
LL | pub trait Trait2 {}
   | ^^^^^^^^^^^^^^^^ this is the found trait `dep_2_reexport::Trait2`
   |
  ::: replaced
   |
LL | extern crate dep_2_reexport;
   | ---------------------------- one version of crate `dependency` used here, as a dependency of crate `foo`
LL | extern crate dependency;
   | ------------------------ one version of crate `dependency` used here, as a direct dependency of the current crate
   = help: you can use `cargo tree` to explore your dependency tree
note: function defined here
  --> replaced
   |
LL | pub fn do_something_trait(_: Box<dyn Trait2>) {}
   |        ^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `dep_2_reexport::dependency::Type2: From<MainType>` is not satisfied
  --> replaced
   |
LL |     into_type2(MainType);
   |     ---------- ^^^^^^^^ the trait `From<MainType>` is not implemented for `dep_2_reexport::dependency::Type2`
   |     |
   |     required by a bound introduced by this call
   |
   = note: required for `MainType` to implement `Into<dep_2_reexport::dependency::Type2>`
note: required by a bound in `into_type2`
  --> replaced
   |
LL | pub fn into_type2(_: impl Into<dependency::Type2>) {}
   |                           ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `into_type2`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
||||||| Stash base
error[E0308]: mismatched types
  --> replaced
   |
LL |     do_something_trait(Box::new(Type) as Box<dyn Trait2>);
   |     ------------------ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected trait `dependency::Trait2`, found trait `dep_2_reexport::Trait2`
   |     |
   |     arguments to this function are incorrect
   |
note: two different versions of crate `dependency` are being used; two types coming from two different versions of the same crate are different types even if they look the same
  --> replaced
   |
LL | pub trait Trait2 {}
   | ^^^^^^^^^^^^^^^^ this is the expected trait `dependency::Trait2`
   |
  ::: replaced
   |
LL | pub trait Trait2 {}
   | ^^^^^^^^^^^^^^^^ this is the found trait `dep_2_reexport::Trait2`
   |
  ::: replaced
   |
LL | extern crate dep_2_reexport;
   | ---------------------------- one version of crate `dependency` used here, as a dependency of crate `foo`
LL | extern crate dependency;
   | ------------------------ one version of crate `dependency` used here, as a direct dependency of the current crate
   = help: you can use `cargo tree` to explore your dependency tree
note: function defined here
  --> replaced
   |
LL | pub fn do_something_trait(_: Box<dyn Trait2>) {}
   |        ^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `dep_2_reexport::Type: From<MainType>` is not satisfied
  --> replaced
   |
LL |     into_type(MainType(42));
   |     --------- ^^^^^^^^^^^^ the trait `From<MainType>` is not implemented for `dep_2_reexport::Type`
   |     |
   |     required by a bound introduced by this call
   |
   = note: required for `MainType` to implement `Into<dep_2_reexport::Type>`
note: required by a bound in `into_type`
  --> replaced
   |
LL | pub fn into_type(_: impl Into<Type>) {}
   |                          ^^^^^^^^^^ required by this bound in `into_type`

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0277`.
=======
For more information about this error, try `rustc --explain E0277`.
>>>>>>> Stashed changes
